--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.37.4",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6"
   }
